syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
package ds_relation_namespace_user;

message DsRelationNamespaceUserBean {

     int32 id=1 ;
     optional int32  user_id=2 ;
     optional int32 namespace_id=3 ;
     optional int32  perm=4 ;
     optional string  create_time=5 ;
     optional string update_time=6 ;
}


// Generated according to https://cloud.google.com/apis/design/standard_methods
service DsRelationNamespaceUserBeanService {
  rpc ListDsRelationNamespaceUserBeans(ListDsRelationNamespaceUserBeansRequest) returns (ListDsRelationNamespaceUserBeansResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/DsRelationNamespaceUserBeans"
    };
  }

  rpc GetDsRelationNamespaceUserBean(GetDsRelationNamespaceUserBeanRequest) returns (DsRelationNamespaceUserBean) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=DsRelationNamespaceUserBeans/*}"
    };
  }

  rpc CreateDsRelationNamespaceUserBean(CreateDsRelationNamespaceUserBeanRequest) returns (DsRelationNamespaceUserBean) {
    option (google.api.http) = {
      post: "/v1alpha1/DsRelationNamespaceUserBeans"
      body: "DsRelationNamespaceUserBean"
    };
  }

  rpc UpdateDsRelationNamespaceUserBean(UpdateDsRelationNamespaceUserBeanRequest) returns (DsRelationNamespaceUserBean) {
    option (google.api.http) = {
      patch: "/v1alpha1/{DsRelationNamespaceUserBean.name=DsRelationNamespaceUserBeans/*}"
      body: "DsRelationNamespaceUserBean"
    };
  }

  rpc DeleteDsRelationNamespaceUserBean(DeleteDsRelationNamespaceUserBeanRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=DsRelationNamespaceUserBeans/*}"
    };
  }
}

// message DsRelationNamespaceUserBean {
// ! This should be defined elsewhere
// }

message ListDsRelationNamespaceUserBeansRequest {


  // The maximum number of items to return.
  int32 page_size = 1;

 int32 page_num = 2;
}

message ListDsRelationNamespaceUserBeansResponse {
  // The field name should match the noun "DsRelationNamespaceUserBean" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated DsRelationNamespaceUserBean DsRelationNamespaceUserBeans = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetDsRelationNamespaceUserBeanRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateDsRelationNamespaceUserBeanRequest {
  // The parent resource name where the DsRelationNamespaceUserBean is to be created.
  string parent = 1;

  // The DsRelationNamespaceUserBean id to use for this DsRelationNamespaceUserBean.
  string DsRelationNamespaceUserBean_id = 2;

  // The DsRelationNamespaceUserBean resource to create.
  // The field name should match the Noun in the method name.
  DsRelationNamespaceUserBean DsRelationNamespaceUserBean = 3;
}

message UpdateDsRelationNamespaceUserBeanRequest {
  // The DsRelationNamespaceUserBean resource which replaces the resource on the server.
  DsRelationNamespaceUserBean DsRelationNamespaceUserBean = 1;

  // The update mask applies to the resource. For the `google.protobuf.FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#google.protobuf.FieldMask
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteDsRelationNamespaceUserBeanRequest {
  // The resource name of the DsRelationNamespaceUserBean to be deleted.
  string name = 1;
}
